--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,16 @@ body {
   background: #0f1716;
 }
 
+:root {
+  --primarytext-color: #57ac47;
+  --secondary-color: #88c13c;
+}
+
 .Toastify__toast-body > div:last-child {
   word-break: break-word;
   flex: 1;
-  color: black;}
+  color: black;
+}
 @font-face {
   font-family: "Geometria";
   src: url("/fonts/geometria_bold.otf") format("truetype");
@@ -42,7 +48,9 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
-
+main {
+  overflow: hidden;
+}
 strong {
   color: #88c13c;
 }
