--- a/src/components/benefits/benefits.module.css
+++ b/src/components/benefits/benefits.module.css
@@ -1,12 +1,17 @@
 .benefits {
   position: relative;
+  margin-top: 200px;
 }
 
 .benefits-cards {
-  display: flex;
+  display: grid;
+  place-items: center;
+  place-content: center;
   flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 30px;
+  /* justify-content: center; */
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+  grid-template-rows: 1fr 1fr;
 }
 
 .benefits-card {
@@ -14,19 +19,23 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 340px;
-  height: 360px;
+  width: 100%;
+  backdrop-filter: blur(10px);
+  max-width: 423px;
+  /* height: 100%; */
+  height: 560px;
   background: #ffffff0a;
   padding: 20px;
   border-radius: 15px;
 }
 
 .benefits-card-img {
-  max-width: 134px;
+  width: 160px;
+  height: 160px;
 }
 
 .benefits-card > p {
-  font-size: 17px;
+  font-size: 24px;
   font-weight: 300;
   text-align: center;
 }
@@ -66,9 +75,14 @@ li.benefits-card:nth-child(2) > img:nth-child(2) {
   height: 122%;
   z-index: -1;
 }
-
+.backcoin {
+  position: absolute;
+  right: -23%;
+  top: 30%;
+}
 .benefits-footer {
   display: flex;
+  width: 100%;
   align-items: center;
   padding: 20px;
   gap: 15px;
@@ -80,7 +94,7 @@ li.benefits-card:nth-child(2) > img:nth-child(2) {
 .benefits-footer-side {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 15px;
 }
 
 .benefits-footer-side > h5 {
@@ -89,6 +103,7 @@ li.benefits-card:nth-child(2) > img:nth-child(2) {
 
 .benefits-footer-side > p {
   font-weight: 300;
+  font-size: 24px;
 }
 
 @media (max-width: 1200px) {
@@ -100,7 +115,41 @@ li.benefits-card:nth-child(2) > img:nth-child(2) {
     gap: 20px;
   }
 }
-
+@media (max-width: 1430px) {
+  .benefits-card {
+    height: 400px !important;
+    max-width: 360px !important;
+  }
+  .benefits-card p {
+    font-size: 16px !important;
+  }
+  .benefits-cards {
+    gap: 15px !important;
+  }
+}
+@media (max-width: 1780px) {
+  .benefits-card {
+    height: 500px;
+    max-width: 393px;
+  }
+}
+@media (max-width: 1536px) {
+  .benefits-cards {
+    gap: 20px;
+  }
+  .benefits-card {
+    height: 500px;
+    max-width: 373px;
+  }
+  .backcoin {
+    position: absolute;
+    right: -36%;
+    top: 13%;
+  }
+  .benefits-card p {
+    font-size: 21px;
+  }
+}
 @media (max-width: 790px) {
   .benefits-cards {
     justify-content: center;
