--- a/src/components/howtostart/howtostart.module.css
+++ b/src/components/howtostart/howtostart.module.css
@@ -5,6 +5,7 @@
 
 .how-to-start-card > p {
   font-weight: 300;
+  font-size: 24px;
 }
 
 .how-to-start > article {
@@ -16,9 +17,10 @@
 }
 
 .how-to-start-cards {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: 450px 450px 450px;
+  grid-template-rows: 1fr;
+  gap: 40px;
 }
 
 .how-to-start-card {
@@ -29,13 +31,16 @@
 
 .how-to-start-card > h3 {
   text-align: left;
+  z-index: 0;
   font-size: 24px;
   font-weight: normal;
-  margin-bottom: 30px;
+  color: var(--primarytext-color);
+  margin-bottom: 20px;
 }
 
 .how-to-start-card > ul > li {
   list-style: inside;
+  font-size: 24px;
   font-weight: 300;
 }
 
@@ -61,13 +66,30 @@ p > a {
 
 .cards-wrapper {
   display: flex;
-  gap: 30px;
+  align-items: center;
+  flex-direction: column-reverse;
 }
 
-.article > img {
-  width: 500px;
+.startimaghe {
+  width: 483px;
+  height: 516px;
 }
-
+@media (max-width: 1780px) {
+  .how-to-start-cards {
+    grid-template-columns: 390px 390px 390px;
+  }
+}
+@media (max-width: 1536px) {
+  .how-to-start-cards {
+    grid-template-columns: 350px 350px 350px;
+  }
+  .how-to-start-card > p {
+    font-size: 19px;
+  }
+  .how-to-start-card > ul > li {
+    font-size: 19px;
+  }
+}
 @media (max-width: 900px) {
   .how-to-start > h2 {
     text-align: center;
