--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -1,6 +1,5 @@
 .main-section {
   position: relative;
-  background: url("../../assets/imgs/main-background-1.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -23,7 +22,28 @@
   font-weight: 300;
 }
 
-.main-section::after {
+.backgroundmist {
+  position: absolute;
+  height: 400px;
+  filter: blur(200px);
+  right: 17%;
+  border-radius: 50%;
+  width: 400px;
+  background-color: var(--primarytext-color);
+  z-index: 0;
+}
+.topmainsection {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  gap: 100px;
+  padding-top: 250px !important;
+  margin-bottom: 100px !important;
+  margin: auto;
+}
+/* .main-section::after {
   content: "";
   pointer-events: none;
   position: absolute;
@@ -48,13 +68,7 @@
   background-size: cover;
   height: 100%;
   width: 100%;
-}
-
-h1 {
-  position: relative;
-  z-index: 3;
-  font-size: 52px;
-}
+} */
 
 h3 {
   position: relative;
@@ -128,17 +142,17 @@ h2 {
 }
 
 .button {
-  display: none;
   justify-content: center;
   align-items: center;
   border: none;
+  width: 264px;
+  border-radius: 100px;
   font-size: 20px;
   gap: 20px;
   background: linear-gradient(180deg, #219653 0%, #299c35 100%);
-  padding: 25px 30px;
-  border-radius: 20px;
+  padding: 21px 30px;
   cursor: pointer;
-  margin-top: 20px;
+  margin-top: 40px;
   /* width: 100%; */
   z-index: 999;
 }
@@ -202,5 +216,15 @@ h2 {
 
   .h3 {
     width: 100%;
+  }
+}
+
+@media (max-width: 1430px) {
+  .headertextinfo {
+    max-width: 550px !important;
+  }
+  .topmainsection {
+    padding-top: 150px !important;
+    gap: 30px;
   }
 }
