--- a/src/components/payouts/payouts.module.css
+++ b/src/components/payouts/payouts.module.css
@@ -1,6 +1,7 @@
 .payouts {
   display: flex;
   margin-top: 100px !important;
+  align-items: center;
 }
 
 .payouts > article {
@@ -43,13 +44,14 @@
 .payouts-card > p {
   margin-top: 30px;
   font-weight: 300;
+  font-size: 24px;
 }
 
 .payouts-card-img {
   position: absolute;
-  top: 0;
-  right: 0;
-  width: 108px;
+  top: 14px;
+  right: 21px;
+  width: 80px;
 }
 
 @media (max-width: 1000px) {
