--- a/src/components/roadmap/roadmap.module.css
+++ b/src/components/roadmap/roadmap.module.css
@@ -65,7 +65,7 @@
   margin: 0 auto;
   margin-top: 100px !important;
   justify-content: space-between;
-
+  margin-bottom: 80px;
   order: -1;
   display: flex;
   align-items: center;
@@ -73,6 +73,7 @@
 
 .roadmap-title > h2 {
   transform: none;
+  font-size: 42px;
 }
 
 .btns {
