mobile ui fixes started

--- a/src/components/coin/coin.module.css
+++ b/src/components/coin/coin.module.css
@@ -25,6 +25,17 @@
 .main-coin canvas {
   overflow: visible;
 }
+
+@media (max-width: 1536px) {
+  .coins canvas {
+    width: 500px !important;
+    height: 500px !important;
+  }
+  .coins {
+    width: 500px !important;
+    height: 500px !important;
+  }
+}
 @media (max-width: 1430px) {
   .coins canvas {
     width: 400px !important ;
@@ -35,17 +46,6 @@
     height: 400px !important;
   }
 }
-@media (max-width: 1536px) {
-  .coins canvas {
-    width: 500px;
-    height: 500px;
-  }
-  .coins {
-    width: 500px;
-    height: 500px;
-  }
-}
-
 @media (max-width: 1000px) {
   .main-coin {
     width: 280px;
@@ -75,5 +75,13 @@
 @media (max-width: 500px) {
   .main-coin {
     top: 45%;
+  }
+  .coins canvas {
+    width: 263px !important;
+    height: 263px !important;
+  }
+  .coins {
+    width: 263px !important;
+    height: 263px !important;
   }
 }
