--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -90,3 +90,38 @@
     gap: 100px;
   }
 }
+@media (max-width: 500px) {
+  .aboutsectionbg {
+    margin-top: 0px !important;
+    background: none !important;
+    padding-top: 0;
+  }
+  .aboutsection {
+    flex-direction: column;
+  }
+  .section-subtitle {
+    width: 100% !important;
+    text-align: center;
+    margin-top: -30px;
+    padding: 0px !important;
+    font-size: 18px !important;
+  }
+  .card {
+    flex-direction: column-reverse;
+  }
+  .card > p {
+    font-size: 18px;
+    text-align: center;
+  }
+  .cards-wrapper {
+    margin-top: 20px;
+    gap: 20px;
+  }
+  .section-title {
+    margin-top: 100px;
+    white-space: nowrap;
+    font-size: 24px;
+    text-align: center;
+    padding: 0 20px;
+  }
+}
