--- a/src/components/contactus/contactus.module.css
+++ b/src/components/contactus/contactus.module.css
@@ -108,10 +108,35 @@
   border: none;
   /* cursor: pointer; */
 }
-
+@media (max-width: 900px) {
+  .contactus {
+    margin-bottom: 0px !important;
+    margin-left: 20px !important;
+    margin-right: 20px !important;
+    width: auto !important;
+  }
+  .aside-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    flex-direction: row-reverse;
+    margin-bottom: 0px !important;
+  }
+  .aside-header {
+    justify-content: center;
+    align-items: center;
+  }
+}
 @media (max-width: 900px) {
   .aside-header {
+    justify-content: center;
+    align-items: center;
     width: 100%;
+  }
+  .aside-header > p {
+    text-align: center;
+    font-size: 18px;
   }
   .contactus {
     flex-direction: column;
@@ -121,7 +146,13 @@
   .aside {
     width: 100%;
   }
-
+  .header-contactus-link {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+  }
   .aside-links {
     margin-bottom: 50px;
   }
