--- a/src/components/howtostart/howtostart.module.css
+++ b/src/components/howtostart/howtostart.module.css
@@ -123,7 +123,31 @@ p > a {
 }
 
 @media (max-width: 570px) {
+  .how-to-start {
+    margin-top: 2px !important;
+  }
+  .how-to-start h2 {
+    font-size: 24px;
+    margin-top: 82px;
+  }
+  .how-to-start-cards {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+  }
+  .how-to-start-card > p {
+    font-size: 18px;
+  }
+  .how-to-start-card > h3 {
+    font-size: 18px;
+  }
+  .how-to-start-card > ul > li {
+    font-size: 18px;
+  }
   .article > img {
     width: 90%;
+    width: 90%;
+    margin: auto;
+    height: 445px;
   }
 }
