--- a/src/components/mobile/header/headermobile.module.css
+++ b/src/components/mobile/header/headermobile.module.css
@@ -7,6 +7,10 @@
 
 .nav {
   padding: 20px;
+  position: fixed;
+  background: #ffffff14;
+  width: -webkit-fill-available;
+  backdrop-filter: blur(10px);
 }
 
 .nav-list {
@@ -99,11 +103,45 @@
   .pop-up > div {
     display: none;
   }
+  .aside-list {
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+    align-items: start;
+
+    gap: 28px;
+    margin-top: 42px;
+    font-size: 24px;
+  }
+  .backdropmist {
+    width: 400px;
+    height: 800px;
+    position: absolute;
+    z-index: -1;
+    background-color: var(--primarytext-color);
+    filter: blur(400px);
+  }
   .logo {
     width: 127px;
     height: 48px;
   }
+  .aside-header {
+    padding: 20px;
+    background-color: #ffffff12;
+  }
   .aside {
     width: 100%;
+    padding: 0px;
+  }
+  .aside-footer {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    gap: 20px;
+    align-items: end;
+    margin-top: 18%;
+    top: 64%;
+    left: 24%;
+    margin: auto;
   }
 }
