--- a/src/components/trustbetmodes/tbetmodes.module.css
+++ b/src/components/trustbetmodes/tbetmodes.module.css
@@ -24,7 +24,8 @@
 .trustbet-modes-cards {
   margin-top: 80px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 100px;
 }
 
 .trustbet-modes-card {
@@ -155,9 +156,39 @@
     justify-content: center;
     gap: 0;
   }
+  .t-bet-bg {
+    background: none;
+  }
   .trustbet-modes-card {
     width: fit-content;
     margin-top: 30px;
+  }
+  .trustbet-modes {
+    max-width: 100% !important;
+    padding: 0px 20px;
+    margin-top: 0px !important;
+  }
+  .section {
+    margin-top: 44px !important;
+  }
+  .trustbet-modes-card {
+    width: 100% !important;
+    height: 440px !important;
+  }
+  .trustbet-modes-card img {
+    width: 390px;
+  }
+  .trustbet-modes-cards {
+    margin-top: 0px;
+  }
+  .trustbet-modes p {
+    font-size: 18px;
+    line-height: 32px;
+  }
+  .trustbet-modes h3 {
+    width: 100% !important;
+    text-align: center;
+    line-height: 31px !important;
   }
   .button {
     display: none;
