--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,12 @@ body {
   font-weight: 300;
   font-style: normal;
 }
-
+.buylabel {
+  label {
+    font-size: 14px !important;
+    font-weight: 100;
+  }
+}
 * {
   font-family: "Geometria", sans-serif;
   margin: 0;
