--- a/src/components/connectwallet/connectwallet.module.scss
+++ b/src/components/connectwallet/connectwallet.module.scss
@@ -8,7 +8,18 @@
 .info > img {
   margin-top: 100px;
 }
-
+.primarybbtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  font-size: 20px;
+  gap: 10px;
+  background: linear-gradient(180deg, #219653 0%, #299c35 100%);
+  padding: 25px 30px;
+  border-radius: 20px;
+  cursor: pointer;
+}
 .info > h2 {
   margin-top: 50px;
   font-weight: 500;
@@ -23,6 +34,11 @@
 }
 
 @media (max-width: 820px) {
+  .primarybbtn {
+    height: 64px;
+    border-radius: 100px;
+    font-size: 18px;
+  }
   .info > img {
     width: 100%;
   }
