--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -13,6 +13,7 @@
   z-index: 100;
   pointer-events: all;
   opacity: 1;
+  display: none;
 }
 
 .non-visible {
@@ -22,6 +23,9 @@
 }
 
 @media (max-width: 500px) {
+  .visible {
+    display: block;
+  }
   .button {
     display: flex;
     justify-content: center;
