--- a/src/components/primarybutton/primarybutton.module.scss
+++ b/src/components/primarybutton/primarybutton.module.scss
@@ -10,3 +10,11 @@
   border-radius: 20px;
   cursor: pointer;
 }
+
+@media screen {
+  .primaryButton {
+    height: 64px;
+    border-radius: 100px;
+    font-size: 20px;
+  }
+}
