--- a/src/components/benefits/benefits.module.css
+++ b/src/components/benefits/benefits.module.css
@@ -4,12 +4,14 @@
 }
 
 .benefits-cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, auto) 1fr;
   gap: 40px;
 }
-
+.infodiv {
+  grid-column: 1 / -1; /* Span all columns */
+}
 .benefits-card {
   display: flex;
   flex-direction: column;
@@ -17,7 +19,7 @@
   justify-content: space-between;
   width: 100%;
   backdrop-filter: blur(10px);
-  max-width: 423px;
+  /* max-width: 423px; */
   /* height: 100%; */
   height: 560px;
   background: #ffffff0a;
@@ -83,7 +85,6 @@ li.benefits-card:nth-child(2) > img:nth-child(2) {
   padding: 20px;
   gap: 15px;
   background: #ffffff0a;
-  margin-top: 30px;
   border-radius: 15px;
 }
 
@@ -119,6 +120,9 @@ li.benefits-card:nth-child(2) > img:nth-child(2) {
   .benefits-card p {
     font-size: 16px !important;
   }
+  .benefits-footer-side > p {
+    font-size: 16px !important;
+  }
   .benefits-cards {
     display: grid;
     place-items: center;
@@ -138,6 +142,9 @@ li.benefits-card:nth-child(2) > img:nth-child(2) {
   .benefits-card p {
     font-size: 21px;
   }
+  .benefits-footer-side > p {
+    font-size: 21px;
+  }
 }
 @media (max-width: 1536px) {
   .benefits-cards {
@@ -153,6 +160,9 @@ li.benefits-card:nth-child(2) > img:nth-child(2) {
     top: 13%;
   }
   .benefits-card p {
+    font-size: 21px;
+  }
+  .benefits-footer-side > p {
     font-size: 21px;
   }
 }
