--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -26,14 +26,6 @@
   .visible {
     display: block;
   }
-  .button {
-    display: flex;
-    justify-content: center;
-    font-size: 15px;
-    padding: 25px 30px;
-    bottom: 20px;
-    min-width: 70%;
-  }
 }
 
 @media (max-width: 820px) {
@@ -41,5 +33,12 @@
     right: none;
     left: 50%;
     transform: translateX(-50%);
+    display: flex;
+    justify-content: end;
+    font-size: 15px;
+    padding: 18px 5px;
+    width: 240px;
+    bottom: 20px;
+    min-width: 92%;
   }
 }
