--- a/src/components/mobile/header/headermobile.module.css
+++ b/src/components/mobile/header/headermobile.module.css
@@ -129,6 +129,9 @@
     padding: 20px;
     background-color: #ffffff12;
   }
+  .aside-list > li > a {
+    font-size: 20px;
+  }
   .aside {
     width: 100%;
     padding: 0px;
