--- a/src/components/primarybutton/primarybutton.module.scss
+++ b/src/components/primarybutton/primarybutton.module.scss
@@ -11,7 +11,7 @@
   cursor: pointer;
 }
 
-@media screen {
+@media (max-width: 800px) {
   .primaryButton {
     height: 64px;
     border-radius: 100px;
