--- a/src/components/tokendetails/tokendetails.module.css
+++ b/src/components/tokendetails/tokendetails.module.css
@@ -158,6 +158,8 @@ article {
 @media (max-width: 550px) {
   .tbet-gif {
     margin-top: 44px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .token-title {
     margin: 0px !important;
