--- a/src/components/connectwalletmodalpopup/index.css
+++ b/src/components/connectwalletmodalpopup/index.css
@@ -8,7 +8,7 @@
 .mobilelabelsselect {
   display: flex !important;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   gap: 15px !important;
 }
 .walletswrapper {
