Ui fixes and Refresh wallet feature added

--- a/src/components/contactus/contactus.module.css
+++ b/src/components/contactus/contactus.module.css
@@ -115,6 +115,10 @@
   /* cursor: pointer; */
 }
 @media (max-width: 1430px) {
+  .contactus {
+    margin-bottom: 100px !important;
+    margin-top: 120px !important;
+  }
   .span {
     font-size: 18px;
   }
