--- a/src/components/benefits/benefits.module.css
+++ b/src/components/benefits/benefits.module.css
@@ -113,6 +113,9 @@ li.benefits-card:nth-child(2) > img:nth-child(2) {
   }
 }
 @media (max-width: 1430px) {
+  .benefits {
+    margin-top: 120px !important;
+  }
   .benefits-card {
     height: 400px !important;
     max-width: 360px !important;
