--- a/src/components/connectwallet/connectwallet.module.scss
+++ b/src/components/connectwallet/connectwallet.module.scss
@@ -33,6 +33,11 @@
   margin-top: 30px;
 }
 
+@media (max-width: 1450px) {
+  .info {
+    margin-top: 100px !important;
+  }
+}
 @media (max-width: 820px) {
   .primarybbtn {
     height: 64px;
