--- a/src/components/roadmap/roadmap.module.css
+++ b/src/components/roadmap/roadmap.module.css
@@ -94,7 +94,15 @@
 .btn:hover {
   background: none;
 }
-
+@media (max-width: 1450px) {
+  .roadmap-title > h2 {
+    font-size: 35px;
+  }
+  .roadmap-title {
+    margin-top: 60px !important;
+    margin-bottom: 40px !important;
+  }
+}
 @media (max-width: 820px) {
   .roadmap-title {
     flex-direction: column;
