--- a/src/components/contactus/contactus.module.css
+++ b/src/components/contactus/contactus.module.css
@@ -115,6 +115,9 @@
   /* cursor: pointer; */
 }
 @media (max-width: 1430px) {
+  .article {
+    width: 46%;
+  }
   .contactus {
     margin-bottom: 100px !important;
     margin-top: 120px !important;
